Add fetching and injecting of actual custom properties of repository